--- a/public/css/resv-show.css
+++ b/public/css/resv-show.css
@@ -1,5 +1,6 @@
 #bigWrapper{
   width: 80%;
+  border-radius: 5px;
 }
 
 .wrapper {
@@ -10,6 +11,7 @@
   margin-bottom: 50px;
   background: -webkit-linear-gradient(315deg, #C7767B 0%, #77A2E0 100%);
   background: linear-gradient(135deg, #C7767B 0%, #77A2E0 100%);
+  border-radius: 5px;
 }
 
 .date {
@@ -29,7 +31,7 @@
 }
 
 .circle {
-  background-color: #01426a;
+  background-color: black;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
   width: 110px;
   height: 110px;
