--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -4,9 +4,64 @@
   </div>
 
 <!-- Find Flights Form-->
+<div class="container find-flight-form" id="book">
+  <div class="form-container">
+    <form class="login-form">
+      <h3 class="title">Find Flight</h3>
+
+      <form name="flightForm" class="form-inline" novalidate>
+        <label> <input type="checkbox" ng-model="form.oneway"> One-way </label>
+        <div class="row">
+          <div class="form-group col-sm-6">
+            <select class="form-control" ng-model="form.fromCountry" ng-options="airport.iata as airport.name + ' (' + airport.iata + ')' for airport in airports | filter:notNull" required>
+            </select>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="form-group col-sm-6">
+            <select class="form-control" ng-model="form.toCountry" ng-options="airport.iata as airport.name + ' (' + airport.iata + ')' for airport in airports | filter:notNull" required>
+            </select>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-3">
+            <h4>Outgoing Date</h4>
+          </div>
+          <div class="form-group col-sm-3">
+            <input class="form-control" type="date" value="2016-05-04" ng-model="form.outgoingDate" required ></input>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-3" ng-hide="form.oneway">
+            <h4>Return Date</h4>
+          </div>
+          <div class="form-group col-sm-3">
+            <input class="form-control"  type="date" value="2016-05-05" ng-model="form.returnDate" ng-hide="form.oneway" ></input>
+          </div>
+        </div>
 
 
-<div class="container find-flight-form" id="book" >
+
+        <div class="row">
+          <div class="col-sm-4">
+            <select class="form-control" ng-model="form.class">
+              <option value="Economy"  selected>Economy</option>
+              <option value="Business">Business</option>
+            </select>
+          </div>
+
+        </div>
+        <div class="row text-center ">
+          <button id="checkFlightButton" class = "btn btn-default hvr-pulse btn-lg" type = "button" ng-click="checkFlight()">Check Flight</button>
+        </div>
+      </form>
+
+    </form>
+  </div>
+</div>
+<!-- till here-->
+<!-- <div class="container find-flight-form" id="book" >
   <div class="jumbotron">
 
 
@@ -93,7 +148,7 @@
       </div>
     </div>
 
-  </div>
+  </div> -->
   <script src="js/typed.js"></script>
   <script>
   $(function(){
