--- a/public/css/resv-show.css
+++ b/public/css/resv-show.css
@@ -1,7 +1,3 @@
-#bigWrapper{
-  width: 80%;
-  border-radius: 5px;
-}
 
 .wrapper {
   font-family: "Helvetica Neue", Arial;
@@ -9,8 +5,14 @@
   margin: 0 auto;
   margin-top: 150px;
   margin-bottom: 50px;
-  background: -webkit-linear-gradient(315deg, #C7767B 0%, #77A2E0 100%);
-  background: linear-gradient(135deg, #C7767B 0%, #77A2E0 100%);
+  /*background: -webkit-linear-gradient(315deg, #C7767B 0%, #77A2E0 100%);
+  background: linear-gradient(135deg, #C7767B 0%, #77A2E0 100%);*/
+  background: linear-gradient(135deg, #bd6772, #53223f);
+  border-radius: 5px;
+  padding-top: 10px;
+  width: 70%;
+  box-sizing: border-box;
+  box-shadow: 0px 2px 4px black;
   border-radius: 5px;
 }
 
@@ -31,14 +33,21 @@
 }
 
 .circle {
-  background-color: black;
+  background: #ffffff;
+  background: -moz-linear-gradient(left, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, #ffffff), color-stop(47%, #f6f6f6), color-stop(100%, #ededed));
+  background: -webkit-linear-gradient(left, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
+  background: -o-linear-gradient(left, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
+  background: -ms-linear-gradient(left, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
+  background: linear-gradient(to right, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=1 );
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
   width: 110px;
   height: 110px;
   text-align: center;
   margin: 0px auto;
   border-radius: 50%;
-  border: 5px solid white;
+  border: 5px solid #F5F5F5;
   box-sizing: border-box;
   position: relative;
 }
@@ -51,9 +60,9 @@
   margin: 0 auto;
   right: 0;
   left: 0;
-  color: white;
+  color: #01426A;
   z-index: 1;
-  text-shadow: 0px 1px 2px black;
+  /*text-shadow: 0px 1px 2px black;*/
   -webkit-transition: 0.4s ease all;
   transition: 0.4s ease all;
 }
@@ -81,9 +90,6 @@
 }
 
 .flight {
-  box-sizing: border-box;
-  box-shadow: 0px 2px 4px black;
-  border-radius: 5px;
   position: relative;
 }
 
@@ -137,11 +143,11 @@
   -webkit-transition: 0.4s ease all;
   transition: 0.4s ease all;
 }
-.tickets .ticket:last-of-type {
-  margin-top: -35px;
-  -webkit-transform: rotate(1deg);
-  transform: rotate(1deg);
-}
+/*.tickets .ticket:last-of-type {
+/*margin-top: -35px;
+-webkit-transform: rotate(1deg);
+transform: rotate(1deg);*/
+}*/
 .tickets .ticket .name {
   font-weight: 800;
 }
