--- a/public/css/payment.css
+++ b/public/css/payment.css
@@ -1,40 +1,47 @@
 *,
-*::before,
-*::after {
+*:before,
+*:after {
   box-sizing: border-box;
 }
-
+/*--------------------
+Checkout
+--------------------*/
+.checkout {
+  font-family: 'Open Sans', sans-serif;
+  margin: 220px auto 30px;
+  position: relative;
+  width: 70%;
+  background: white;
+  border-radius: 15px;
+  padding: 160px 45px 30px;
+  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
+  height: 550px;
+}
 
 /*--------------------
 Buttons
 --------------------*/
-.checkout .btn {
-  display: block;
-  background: #bded7d;
+.checkout .confirm {
   color: white;
   text-decoration: none;
-  margin: 20px 0;
   padding: 15px 15px;
   border-radius: 5px;
-  position: relative;
+  background: #01426a;
+  width: 200px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.5em;
+  border: none;
+  box-shadow: none;
+  clear: both;
+  float: right;
+  margin-top: 20px;
+
 }
-.checkout .btn::after {
-  content: '';
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
-  box-shadow: inset 0 3px 0 transparent, 0 3px 3px rgba(0, 0, 0, 0.2);
-  border-radius: 5px;
+.checkout .confirm .fa {
+  margin-right: 6px;
 }
-.checkout .btn:hover::after {
-  background: rgba(0, 0, 0, 0.1);
-  box-shadow: inset 0 3px 0 rgba(0, 0, 0, 0.2);
-}
+
 
 /*--------------------
 Form
@@ -63,7 +70,7 @@ Form
 .checkout .form fieldset label {
   display: block;
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 1.5em;
   color: rgba(0, 0, 0, 0.6);
   margin-bottom: 5px;
   font-weight: bold;
@@ -76,7 +83,7 @@ Form
   color: #333333;
   padding: 10px;
   border-radius: 5px;
-  font-size: 15px;
+  font-size: 0.8em;
   outline: none !important;
   border: 1px solid rgba(0, 0, 0, 0.3);
   box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.2);
@@ -107,8 +114,8 @@ Form
 }
 .checkout .form fieldset .select select {
   -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   position: absolute;
   padding: 0;
   border: none;
@@ -122,54 +129,27 @@ Form
   color: transparent;
   text-shadow: 0 0 0 #000;
 }
-.checkout .form button {
-  width: 20%;
-  outline: none !important;
-  background: -webkit-linear-gradient(270deg, #49a09b, #3d8291);
-  background: linear-gradient(180deg, #49a09b, #3d8291);
-  text-transform: uppercase;
-  font-weight: bold;
-  border: none;
-  box-shadow: none;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-  margin-top: 90px;
-  font-size: 1.25em;
-}
-.checkout .form button .fa {
-  margin-right: 6px;
-}
 
-/*--------------------
-Checkout
---------------------*/
-.checkout {
-  font-family: 'Open Sans', sans-serif;
-  margin: 220px auto 30px;
-  position: relative;
-  width: 70%;
-  background: white;
-  border-radius: 15px;
-  padding: 160px 45px 30px;
-  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
-}
+
+
 
 /*--------------------
 Credit Card
 --------------------*/
 .credit-card-box {
   -webkit-perspective: 1000;
-          perspective: 1000;
+  perspective: 1000;
   width: 400px;
   height: 280px;
   position: absolute;
   top: -112px;
   left: 50%;
   -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 .credit-card-box:hover .flip, .credit-card-box.hover .flip {
   -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 .credit-card-box .front,
 .credit-card-box .back {
@@ -177,7 +157,7 @@ Credit Card
   height: 250px;
   border-radius: 15px;
   -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
+  backface-visibility: hidden;
   background: -webkit-linear-gradient(315deg, #bd6772, #53223f);
   background: linear-gradient(135deg, #bd6772, #53223f);
   position: absolute;
@@ -204,7 +184,7 @@ Credit Card
   -webkit-transition: 0.6s;
   transition: 0.6s;
   -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
+  transform-style: preserve-3d;
   position: relative;
 }
 .credit-card-box .logo {
@@ -221,11 +201,11 @@ Credit Card
 .credit-card-box .front {
   z-index: 2;
   -webkit-transform: rotateY(0deg);
-          transform: rotateY(0deg);
+  transform: rotateY(0deg);
 }
 .credit-card-box .back {
   -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 .credit-card-box .back .logo {
   top: 185px;
