--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -7,11 +7,21 @@
 <div class="container find-flight-form" id="book">
   <div class="form-container">
     <form class="login-form">
-      <h3 class="title">Find Flight</h3>
-
+      <h2 class="title"><span class="fontawesome-plane"></span>Find Flight</h2>
       <form name="flightForm" class="form-inline" novalidate>
-        <label> <input type="checkbox" ng-model="form.oneway"> One-way </label>
         <div class="row">
+          <label class="col-sm-3"> <input type="checkbox" ng-model="form.oneway"> One-way </label>
+          <div class="col-sm-3">
+            <select class="form-control" ng-model="form.class">
+              <option value="Economy"  selected>Economy</option>
+              <option value="Business">Business</option>
+            </select>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-3">
+            <h4>From</h4>
+          </div>
           <div class="form-group col-sm-6">
             <select class="form-control" ng-model="form.fromCountry" ng-options="airport.iata as airport.name + ' (' + airport.iata + ')' for airport in airports | filter:notNull" required>
             </select>
@@ -19,6 +29,9 @@
         </div>
 
         <div class="row">
+          <div class="col-sm-3">
+              <h4>To</h4>
+          </div>
           <div class="form-group col-sm-6">
             <select class="form-control" ng-model="form.toCountry" ng-options="airport.iata as airport.name + ' (' + airport.iata + ')' for airport in airports | filter:notNull" required>
             </select>
@@ -43,15 +56,7 @@
 
 
 
-        <div class="row">
-          <div class="col-sm-4">
-            <select class="form-control" ng-model="form.class">
-              <option value="Economy"  selected>Economy</option>
-              <option value="Business">Business</option>
-            </select>
-          </div>
 
-        </div>
         <div class="row text-center ">
           <button id="checkFlightButton" class = "btn btn-default hvr-pulse btn-lg" type = "button" ng-click="checkFlight()">Check Flight</button>
         </div>
@@ -119,7 +124,7 @@
       </div>
 
     </div>
-  </div>
+  </div> -->
   <div class="container text-center" id="viewBF">
     <div class="jumbotron">
       <div class="row text-center">
@@ -148,7 +153,7 @@
       </div>
     </div>
 
-  </div> -->
+  </div>
   <script src="js/typed.js"></script>
   <script>
   $(function(){
@@ -158,3 +163,7 @@
     });
   });
   </script>
+
+  <link href='https://fonts.googleapis.com/css?family=Lato:900,300' rel="stylesheet"></link>
+  <link href='http://weloveiconfonts.com/api/?family=fontawesome' rel="stylesheet"></link>
+
