--- a/public/views/payment-new.html
+++ b/public/views/payment-new.html
@@ -24,6 +24,16 @@
   </div>
   <form class="form" autocomplete="off" novalidate>
     <fieldset>
+      <label for="card-type">Card Type</label>
+      <div class="select" id="select-type">
+        <select id="card-type">
+          <option></option>
+          <option>Visa</option>
+          <option>MasterCard</option>
+        </select>
+      </div>
+    </fieldset>
+    <fieldset>
       <label for="card-number">Card Number</label>
       <input type="num" id="card-number" class="input-cart-number" maxlength="4" />
       <input type="num" id="card-number-1" class="input-cart-number" maxlength="4" />
