--- a/public/views/resv-show.html
+++ b/public/views/resv-show.html
@@ -24,6 +24,9 @@
   </div>
 
   <div class="flight-details">
+    <div class="bookingRef">
+      <span class="title">m1g2</span>
+    </div>
 
     <div class="depart">
       <span class="title">Outbound</span>
@@ -31,50 +34,52 @@
         <span class="way">Departing</span>
         Friday 6th May 2016 &mdash; 17:35 </div><!--
         --><div class="half">
-        <span class="way">Arriving</span>Friday 7th May 2016 &mdash; 08:19</div>
+        <span class="way">Arriving</span>Friday 7th May 2016 &mdash; 08:19
       </div>
+    </div>
 
-      <div class="return">
-        <span class="title">Return</span>
-        <div class="half">
-          <span class="way">Departing</span>
-          Friday 6th May 2016 &mdash; 17:35 </div><!--
-          --><div class="half">
-          <span class="way">Arriving</span>Friday 7th May 2016 &mdash; 08:19</div>
-        </div>
-
+    <div class="return">
+      <span class="title">Return</span>
+      <div class="half">
+        <span class="way">Departing</span>
+        Friday 6th May 2016 &mdash; 17:35 </div><!--
+        --><div class="half">
+        <span class="way">Arriving</span>Friday 7th May 2016 &mdash; 08:19
       </div>
+    </div>
+
+  </div>
 
 
-      <div class="booking">
-        <div class="tickets">
-          <div class="ticket">
-            <span class="name">Mandy Smith</span>
-            <span class="seat">14B</span>
-            <span class="class">Economy</span>
+  <div class="booking">
+    <div class="tickets">
+      <div class="ticket">
+        <span class="name">Mandy Smith</span>
+        <span class="seat">14B</span>
+        <span class="class">Economy</span>
+      </div>
+    </div>
+
+    <div class="payment">
+      <div id="card-container">
+        <div class="card" id="card">
+          <div class="front">
+            <img class="chip" src="https://www.bethpagefcu.com/~/media/Images/bethpage/Page-Content/CC_chip.ashx?la=en">
+            <img class="payment-card" id="mastercard" src="http://www.veryicon.com/icon/png/Business/Free%20Ecommerce/mastercard.png" />
+            <img class="payment-card" id="visa" src="http://www.veryicon.com/icon/png/Business/Free%20Ecommerce/visa.png">
+            <span class="payment-title">Payment Details</span>
+            <div class="field" id="number">Card Number</div>
+            <div class="field" id="name"> First Last </div>
+            <div class="field" id="date"> Expiry</div>
           </div>
+
+
         </div>
-
-        <div class="payment">
-          <div id="card-container">
-            <div class="card" id="card">
-              <div class="front">
-                <img class="chip" src="https://www.bethpagefcu.com/~/media/Images/bethpage/Page-Content/CC_chip.ashx?la=en">
-                <img class="payment-card" id="mastercard" src="http://www.veryicon.com/icon/png/Business/Free%20Ecommerce/mastercard.png" />
-                <img class="payment-card" id="visa" src="http://www.veryicon.com/icon/png/Business/Free%20Ecommerce/visa.png">
-                <span class="payment-title">Payment Details</span>
-                <div class="field" id="number">Card Number</div>
-                <div class="field" id="name"> First Last </div>
-                <div class="field" id="date"> Expiry</div>
-              </div>
-
-
-            </div>
-
-          </div>
-        </div>
-
 
       </div>
     </div>
+
+
   </div>
+</div>
+</div>
