snow removed temporarily-HEAVY CPU USAGE

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -216,10 +216,10 @@ p.small {
 }
 
 
-.snow {
+#snow {
   position: absolute;
   top: 0;
   left: 0;
-  pointer-events: none;
   z-index: -100;
+  pointer-events: none;
 }
