--- a/public/views/resv-show.html
+++ b/public/views/resv-show.html
@@ -1,6 +1,5 @@
 <link href='https://fonts.googleapis.com/css?family=Homemade+Apple' rel='stylesheet' type='text/css'>
 <link href="css/resv-show.css" rel="stylesheet">
-<script src="js/resv-show.js"></script>
 
 
 <div class="wrapper">
@@ -25,9 +24,9 @@
 
   <div class="flight-details">
     <div class="bookingRef">
+      <span class="title title-b">Booking Ref. </span>
       <span class="title">m1g2</span>
     </div>
-
     <div class="depart">
       <span class="title">Outbound</span>
       <div class="half">
@@ -47,7 +46,6 @@
         <span class="way">Arriving</span>Friday 7th May 2016 &mdash; 08:19
       </div>
     </div>
-
   </div>
 
 
@@ -55,7 +53,16 @@
     <div class="tickets">
       <div class="ticket">
         <span class="name">Mandy Smith</span>
+        <span class="direction">outgoing</span>
         <span class="seat">14B</span>
+        <span class="cost">$120</span>
+        <span class="class">Economy</span>
+      </div>
+      <div class="ticket">
+        <span class="name">Mandy Smith</span>
+        <span class="direction">return</span>
+        <span class="seat">20A</span>
+        <span class="cost">$200</span>
         <span class="class">Economy</span>
       </div>
     </div>
@@ -65,21 +72,15 @@
         <div class="card" id="card">
           <div class="front">
             <img class="chip" src="https://www.bethpagefcu.com/~/media/Images/bethpage/Page-Content/CC_chip.ashx?la=en">
-            <img class="payment-card" id="mastercard" src="http://www.veryicon.com/icon/png/Business/Free%20Ecommerce/mastercard.png" />
-            <img class="payment-card" id="visa" src="http://www.veryicon.com/icon/png/Business/Free%20Ecommerce/visa.png">
             <span class="payment-title">Payment Details</span>
             <div class="field" id="number">Card Number</div>
             <div class="field" id="name"> First Last </div>
             <div class="field" id="date"> Expiry</div>
+            <div class="field" id="total"> Total</div>
           </div>
-
-
         </div>
-
       </div>
     </div>
-
-
   </div>
 </div>
 </div>
