--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -105,26 +105,24 @@ textarea:focus, input:focus, button:focus {
   padding: 10px 10px 10px 20px;
 }
 
-#checkFlightButton {
-  text-align: center;
-  width: 140px;
-  height: 50px;
-  margin-left: 75%;
-  margin-bottom: 10px;
-  border: none;
-  border-radius: 4px;
-  background: rgba(6, 41, 61, 1);
-  box-shadow: inset 0 0 0 0 #fff;
-      -webkit-transition: all 0.3s;
-      -moz-transition: all 0.3s;
-      -o-transition: all 0.3s;
-      transition: all 0.3s;
-  color: #fff;
-}
 
-#checkFlightButton:hover {
-  box-shadow: inset 0 40px 0 0 #fff;
-  color:rgba(1, 66, 106, 0.7);
+#checkFlightButton {
+  color: rgba(1, 66, 106, 0.7);
+  background: white;
+  text-decoration: none;
+  padding: 15px 15px;
+  border-radius: 5px;
+  width: 200px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.5em;
+  border: solid;
+  border-color: rgba(1, 66, 106, 0.7);
+  box-shadow: none;
+  clear: both;
+  float: right;
+  margin-top: 15px;
+  margin-right: 5%;
 }
 
 
