--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,15 +11,13 @@ body {
   padding:0;
   height:100%;
 }
-div{
-  background-color: rgba(0, 0, 0, 0);
-}
-.jumbotron{
+
+/*.jumbotron{
   background-color: rgba(0, 0, 0, 0);
   opacity: 0;
 
 
-}
+}*/
 p {
   font-size: 0.7em;
 }
