--- a/public/css/flights.css
+++ b/public/css/flights.css
@@ -7,9 +7,10 @@
   margin-top: 10px;
   position: relative;
   overflow: scroll;
+
 }
 .outFlights, .returnFlights{
-  background-color: rgba(255,255,255,0.8);
+  background-color: rgba(255,255,255,0.9);
   border-radius: 15px;
   box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
   padding-bottom: 20px;
@@ -19,8 +20,8 @@
 
 
 .flights-wrapper{
-  width: 50%;
-  height: 700px;
+  width: 60%;
+  height:100%;
   font-family: Open Sans, sans-serif;
   margin: 120px  30px;
   background-color: rgba(255,255,255,0);
@@ -33,9 +34,10 @@
   font-size: 1.25em;
   font-weight: 800;
 }
-.flights-wrapper td{
+.flights-wrapper table tr td{
   font-family: Inconsolata, sans-serif;
-  font-size: 1.25em;
+  font-size: 1.5em;
+  vertical-align: middle;
 }
 
 .flights-wrapper input {
@@ -97,4 +99,130 @@
 .flights-wrapper .row{
   margin-left: 0;
   margin-right: 0;
+}
+.flight-number{
+  color:#01426a;
+  font-size: 25px;
+}
+
+
+#pricing-table {
+  text-align: center;
+  position: fixed;
+  top: 0;
+  right: 0;
+  margin-right: 120px;
+  margin-top: 180px;
+  border-radius: 5px;
+  width: 25%;
+
+
+}
+
+#pricing-table .plan {
+  font: 12px 'Lucida Sans', 'trebuchet MS', Arial, Helvetica;
+  text-shadow: 0 1px rgba(255,255,255,.8);
+  background: #fff;
+  border: 1px solid #ddd;
+  color: #333;
+  padding: 20px;
+  position: relative;
+  border-radius: 5px;
+  height: 100%;
+  display: block;
+}
+
+
+
+/* --------------- */
+
+#pricing-table h3 {
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: normal;
+  padding: 20px;
+  margin: -20px -20px 50px -20px;
+  background-color: #eee;
+  background-image: -moz-linear-gradient(#fff,#eee);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#eee));
+  background-image: -webkit-linear-gradient(#fff, #eee);
+  background-image: -o-linear-gradient(#fff, #eee);
+  background-image: -ms-linear-gradient(#fff, #eee);
+  background-image: linear-gradient(#fff, #eee);
+}
+
+
+
+#pricing-table h3 span {
+  display: block;
+  font: bold 25px/100px Georgia, Serif;
+  color: #777;
+  background: #fff;
+  border: 5px solid #fff;
+  height: 100px;
+  width: 100px;
+  margin: 10px auto -65px;
+  -moz-border-radius: 100px;
+  -webkit-border-radius: 100px;
+  border-radius: 100px;
+  -moz-box-shadow: 0 5px 20px #ddd inset, 0 3px 0 #999 inset;
+  -webkit-box-shadow: 0 5px 20px #ddd inset, 0 3px 0 #999 inset;
+  box-shadow: 0 5px 20px #ddd inset, 0 3px 0 #999 inset;
+}
+
+/* --------------- */
+
+#pricing-table ul {
+  margin: 20px 0 0 0;
+  padding: 0;
+  list-style: none;
+}
+
+#pricing-table li {
+  border-top: 1px solid #ddd;
+  padding: 10px 0;
+}
+
+/* --------------- */
+
+#pricing-table .checkout {
+  color: white;
+  text-decoration: none;
+  padding: 15px 15px;
+  border-radius: 5px;
+  background: #01426a;
+  width: 200px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.5em;
+  border: none;
+  box-shadow: none;
+  clear: both;
+  font-family: 'Open Sans', sans-serif;
+  position: relative;
+  margin-top: 25px;
+  display: inline-block;
+  margin-bottom: 15px;
+
+}
+
+
+
+
+/* --------------- */
+
+.clear:before, .clear:after {
+  content:"";
+  display:table
+}
+
+.clear:after {
+  clear:both
+}
+
+.clear {
+  zoom:1
+}
+#pricing-table table tr td{
+  vertical-align: middle;
 }
