--- a/public/views/landing.html
+++ b/public/views/landing.html
@@ -18,6 +18,7 @@
             </select>
           </div>
         </div>
+
         <div class="row">
           <div class="col-sm-3">
             <h4>From</h4>
@@ -25,7 +26,6 @@
           <div class="form-group col-sm-6" >
             <select class="form-control" ng-model="form.fromCountry" ng-options="airport.iata as airport.name + ' (' + airport.iata + ')' for airport in airports | filter:notNull" required>
             </select>
-
           </div>
         </div>
 
@@ -166,5 +166,8 @@
   <link href='https://fonts.googleapis.com/css?family=Lato:900,300' rel="stylesheet"></link>
   <link href='http://weloveiconfonts.com/api/?family=fontawesome' rel="stylesheet"></link>
   <script src="js/datePicker.js"> </script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/js/bootstrap-datepicker.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-dateFormat/1.0/jquery.dateFormat.js"></script>
 
 
