--- a/public/css/passenger-info.css
+++ b/public/css/passenger-info.css
@@ -134,7 +134,7 @@ Form
   width: 100%;
   height: 70px;
   margin: 0 auto;
-  background: linear-gradient(135deg, #bd6772, #53223f);
+  background: linear-gradient(50deg, #bd6772, #01426a); 
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
   color: white;
