--- a/public/css/payment.css
+++ b/public/css/payment.css
@@ -158,8 +158,8 @@ Credit Card
   border-radius: 15px;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  background: -webkit-linear-gradient(315deg, #bd6772, #53223f);
-  background: linear-gradient(135deg, #bd6772, #53223f);
+  background: linear-gradient(50deg, #bd6772, #01426a);
+
   position: absolute;
   color: #fff;
   font-family: Inconsolata;
