--- a/public/css/envelope.css
+++ b/public/css/envelope.css
@@ -119,7 +119,7 @@
 }
 
 
-.line {
+#envelope .line {
   min-width: 8%;
   height: 15px;
   float: left;
@@ -130,13 +130,13 @@
 
 }
 
-.line:nth-child(odd) {
+#envelope .line:nth-child(odd) {
   background: #005091;
 }
-.line:nth-child(even) {
+#envelope .line:nth-child(even) {
   background: #9b1d4a;
 }
-.line:first-child {
+#envelope .line:first-child {
   margin-left: -10px;
 }
 #envelope div:nth-child(5) .line:first-child {
@@ -181,7 +181,7 @@
   display: inline-block;
   text-align: start;
 }
-#send {
+#envelope #send {
   background: transparent;
   cursor: pointer;
   position: relative;
@@ -189,10 +189,10 @@
   transition: color 0.3s;
 }
 
-#send:hover {
+#envelope #send:hover {
   color: #9b1d4a;
 }
-.sending {
+#envelope .sending {
 
   animation: sending 1.5s forwards;
 }
@@ -207,7 +207,7 @@
     transform: translateY(180px);
   }
 }
-.callback {
+#envelope .callback {
   color: rgba(0, 0, 0, 0.2);
   padding-top: 25px;
   line-height: 1.5em;
